# Magnetite

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.markdown  index.html
cmake/modules/: FindASSIMP.cmake  FindBULLET.cmake  FindGLM.cmake  FindGLee.cmake  FindGLew.cmake  FindSFML.cmake  FindV8.cmake
include/: BaseBlock.h  BaseEntity.h  BaseGame.h  BaseResource.h  BaseTriangulator.h  BlockFactory.h  BlockTriangulator.h  BuildConfig.h  BuildConfig.h.in  BulletDebug.h  Camera.h  Character.h  Chunk.h  ChunkGenerator.h  ChunkLoader.h  CobbleBlock.h  Collision.h  Component.h  DirtBlock.h  Explosion.h  Frustum.h  Geometry.h  GrassBlock.h  InputManager.h  LightingManager.h  MagnetiteCore.h  Matrix.h  ModelResource.h  MossCobbleBlock.h  MovingBlock.h  OpencraftCore.h  PhysicsState.h  PhysicsWorldObject.h  Player.h  Profiler.h  ProgramResource.h  Region.h  Renderer.h  ResourceManager.h  SandBlock.h  (+23 more)
include/Components/: ComponentEvents.h  InfoComponent.h  InterpolatorComponent.h  PhysicsComponent.h  RenderableComponent.h
include/blocks/: LeafBlock.h  LogBlock.h
include/paging/: PagingCamera.h  PagingContext.h
include/script/: Entities.h  ScriptCharacter.h  ScriptEntity.h  ScriptExplosion.h  ScriptGlobalsDebug.h  ScriptGlobalsList.h  ScriptGlobalsWorld.h  ScriptPlayer.h  ScriptWrapper.h
resources/shaders/: l_fragment.glsl  model.prog  model_frag.glsl  model_vert.glsl  s_fragment.glsl  s_vertex.glsl  w_fragment.glsl  w_geometry.glsl  w_vertex.glsl  world.prog  world_sky.prog
resources/sprites/: sky.xcf
scripts/: events.js  main.js  menu.js
scripts/games/fortress/: drone.js  fortress.js  menu.js  structure.js
scripts/games/fortress/entities/anvil/: anvil.js
scripts/games/fortress/entities/drone/: drone.js
scripts/games/fortress/entities/stockpile/: stockpile.js
scripts/games/fortress/structures/: battlements.js  forge.js  foundation.js  stockpile.js  swall.js  tower.js  wall.js  woodcutter.js  wwall.js
scripts/games/sandbox/: sandbox.js
scripts/games/test/: test.js
scripts/games/tetris/: tetris.js
source/: .ProgramResource.cpp.swp  .Renderer.cpp.swp  BaseBlock.cpp  BaseEntity.cpp  BaseGame.cpp  BaseResource.cpp  BlockFactory.cpp  BulletDebug.cpp  Camera.cpp  Character.cpp  Chunk.cpp  ChunkGenerator.cpp  ChunkLoader.cpp  CobbleBlock.cpp  Collision.cpp  Component.cpp  DirtBlock.cpp  Explosion.cpp  Frustum.cpp  GrassBlock.cpp  InputManager.cpp  LightingManager.cpp  MagnetiteCore.cpp  Main.cpp  Matrix.cpp  MossCobbleBlock.cpp  OpencraftCore.cpp  PhysicsWorldObject.cpp  Player.cpp  Profiler.cpp  ProgramResource.cpp  Renderer.cpp  ResourceManager.cpp  SandBlock.cpp  ScriptGame.cpp  ScriptWrapper.cpp  ShaderResource.cpp  Sky.cpp  StoneBlock.cpp  Tests.cpp  (+10 more)
source/Components/: InfoComponent.cpp  InterpolatorComponent.cpp  PhysicsComponent.cpp  RenderableComponent.cpp
source/blocks/: LeafBlock.cpp  LogBlock.cpp
source/geometry/: BaseTriangulator.cpp  BlockTriangulator.cpp
source/paging/: PagingCamera.cpp  PagingContext.cpp
source/renderer/: Geometry.cpp  ProgramResource.cpp  glgeometry.cpp  glprogram.cpp  glshader.cpp
source/resources/: ModelResource.cpp  ModelResources.cpp  Texture.cpp
source/script/: .ScriptWrapper.cpp.kate-swp  Entities.cpp  ScriptCharacter.cpp  ScriptEntity.cpp  ScriptExplosion.cpp  ScriptGlobalsDebug.cpp  ScriptGlobalsWorld.cpp  ScriptPlayer.cpp  ScriptWrapper.cpp
